--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "filament/filament": "^3",
         "flowframe/laravel-trend": "^0.2.0",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-activitylog": "^4.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
