--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "flowframe/laravel-trend": "^0.2.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
+        "psr/simple-cache": "2.0",
+        "pxlrbt/filament-excel": "^2.3",
         "spatie/laravel-activitylog": "^4.8"
     },
     "require-dev": {
